@@ -191,6 +191,9 @@ error policy:</P>
 	<LI><CODE>abort-job</CODE> - Abort the job and proceed
 	with the next job in the queue</LI>
 
+	<LI><CODE>retry-current-job</CODE> - Retry the current job
+	immediately</LI>
+
 	<LI><CODE>retry-job</CODE> - Retry the job after waiting
 	for N seconds; the <VAR>cupsd.conf</VAR> <A
 	HREF="ref-cupsd-conf.html#JobRetryInterval"><CODE>JobRetryInterval</CODE></A>
